tests/A2/reject/badAssignment.ul
void main(){
    int x;
    x = 3.3;
}